tests/core/snapshots/jsonplaceholder-call-post.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "title": "title1",
          "user": {
            "name": "Leanne Graham"
          }
        }
      ]
    }
  }
}
