tests/core/snapshots/jsonplaceholder-call-post.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  id: Int!
  title: String!
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
  user(id: Int!): User
  users: [User]
}

type User {
  id: Int!
  name: String!
}

schema {
  query: Query
}
