tests/core/snapshots/jsonplaceholder-call-post.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(batch: {delay: 100, headers: []}, httpCache: 42) @link(src: "config.yml", type: Config) {
  query: Query
}

type Post {
  id: Int!
  title: String!
  user: User @call(steps: [{query: "user", args: {id: "{{.value.userId}}"}}])
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
  user(id: Int!): User @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  id: Int!
  name: String!
}
