tests/core/snapshots/merge-linked-config.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema
  @server(port: 8000)
  @upstream(batch: {delay: 10, headers: []}, httpCache: 10)
  @link(src: "link-1.graphql", type: Config)
  @link(src: "link-2.graphql", type: Config) {
  query: Query
}

type Foo {
  foo: String
}

type Post {
  id: Int!
  user: User
    @graphQL(args: [{key: "id", value: "{{.value.userId}}"}], url: "http://jsonplaceholder.typicode.com", name: "user")
  userId: Int!
}

type Query {
  foo: Foo @http(url: "http://jsonplaceholder.typicode.com/foo")
  post(id: Int!): Post @http(url: "http://jsonplaceholder.typicode.com/posts/{{.args.id}}")
}

type User {
  id: Int
  name: String
}
