tests/core/snapshots/modified-field.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "fullname": "Leanne Graham"
      }
    }
  }
}
