tests/core/snapshots/mutation-put.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "insertPost": {
        "body": "abc"
      }
    }
  }
}
