tests/core/snapshots/mutation-put.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mutation {
  insertPost(input: PostInput!): Post
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

input PostInput {
  body: String
  id: Int
  title: String
  userId: Int
}

type Query {
  firstUser: User
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
  mutation: Mutation
}
